--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,7 @@
          <h2>HTML, TailwindCSS, NodeJS</h2>
         </div>
          <div class="flex justify-end items-end text-2xl pt-4">
-          <a href=""><i class="fa-brands fa-github text-blue-500"></i></a>
+          <a href="https://github.com/VinnyBenev/portifolio"><i class="fa-brands fa-github text-blue-500"></i></a>
          </div>
     </div>
     
