--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <div class="pt-16 flex items-center lg:flex-row flex-col">
       <div class="px-8 basis-2/4">
         <h1 class="lg:text-6xl text-center text-4xl pb-4 text-blue-700">Hello World!</h1>
-        <p class="text-justify lg:text-left">I am Vinicius Henrique Benevento, a full stack developer and with a huge passion for coding. 
+        <p class="text-justify lg:text-left">I am Vinicius Henrique Benevento, a full stack developer with a huge passion for coding. 
             I`m constantly working with projects in HTML, CSS, Javascript, Node.js, Express.js, MySQL and MongoDB. This engagement and knowledge enables me to collaborate for everithing in a team project, 
             such as the frontend and backend development; database structures; documentation and code versioning. Let`s build something wonderfull together!</p>
         <div class="flex flex-row gap-4 justify-center text-2xl text-white p-8 items-center">
