--- a/src/index.html
+++ b/src/index.html
@@ -15,16 +15,16 @@
             <a href="#projects" class="hover:text-neutral-400 transition">Projects</a>
           </div>
             <div class="pr-4">
-                <a href="./docs/curriculo_vinicius_henrique_benevento (1).pdf" class="hover:text-blue-600 transition">Resume</a>
+                <a href="./docs/curriculo_vinicius_henrique_benevento.pdf" class="hover:text-blue-600 transition">Resume</a>
             </div>
         </nav>
     <section class="intro flex lg:text-xl text-lg bg-neutral-100 min-h-min ">
     <div class="pt-16 flex items-center lg:flex-row flex-col">
       <div class="px-8 basis-2/4">
         <h1 class="lg:text-6xl text-center text-4xl pb-4 text-blue-700">Hello World!</h1>
-        <p class="text-justify lg:text-left">I am Vinicius Henrique Benevento, a full stack developer with a huge passion for coding. 
-            I`m constantly working with projects in HTML, CSS, Javascript, Node.js, Express.js, MySQL and MongoDB. This engagement and knowledge enables me to collaborate for everithing in a team project, 
-            such as the frontend and backend development; database structures; documentation and code versioning. Let`s build something wonderfull together!</p>
+        <p class="text-justify lg:text-left">I am Vinicius Henrique Benevento, a developer and security analyst with a huge interest for log analysis. 
+            I`m constantly working on my studies about Splunk, Threat Assessment and Risk Management. This engagement and knowledge enables me to collaborate for everithing in a team project, 
+            such as SOC and IAM group, and even security policies for a web apliccation. Let me help you protect you assets!</p>
         <div class="flex flex-row gap-4 justify-center text-2xl text-white p-8 items-center">
             <a href="https://www.instagram.com/beneventovinicius/"><i class="fab fa-instagram bg-blue-500 rounded-full p-2 hover:text-blue-600 hover:bg-neutral-200 transition"></i></a>
             <a href="https://www.linkedin.com/in/vinicius-henrique-benevento-b85286286/"><i class="fab fa-linkedin bg-blue-500 rounded-full p-2 hover:text-blue-600 hover:bg-neutral-200 transition"></i></a>
@@ -48,7 +48,7 @@
           <div class="course basis-1/2 grid gap-y-16 justify-center">
            <h2>Technical Course: Informatics for Internet</h2>
            <h2>Advanced English Course</h2>
-           <h2>Fundations of Cibersecurity</h2>
+           <h2>Google Cibersecurity Certificate</h2>
            <h2>Bachelor in Computer Science</h2>          
           </div>
              
@@ -59,7 +59,7 @@
           <div class="location basis-1/2 grid gap-y-16 justify-center text-end">
             <h2>YES! Idiomas, 06/2024</h2>
             <h2>FIEC Indaiatuba, 07/2024</h2>
-            <h2>Google Course, 11/2024</h2>
+            <h2>Coursera, 08/2025</h2>
             <h2>IFSP Salto, 12/2028</h2>
           </div>
          </div>
@@ -91,16 +91,12 @@
                   <h2 class="text-xl text-neutral-400"><strong>DATABASES</strong></h2>
                 </div>
                 <div class="flex flex-col items-center ">
-                  <i class="fa-brands fa-php text-indigo-400"></i>
-                  <h2 class="text-xl text-neutral-400"><strong>PHP</strong></h2>
+                  <i class="fa-solid fa-info text-lime-600"></i>
+                  <h2 class="text-xl text-neutral-400"><strong>SPLUNK</strong></h2>
                 </div>
                 <div class="flex flex-col items-center ">
-                  <i class="fa-brands fa-laravel text-red-600"></i>
-                  <h2 class="text-xl text-neutral-400"><strong>LARAVEL</strong></h2>
-                </div>
-                <div class="flex flex-col items-center ">
-                  <i class="fa-brands fa-figma"></i>
-                  <h2 class="text-xl text-neutral-400"><strong>FIGMA</strong></h2>
+                  <i class="fa-brands fa-linux"></i>
+                  <h2 class="text-xl text-neutral-400"><strong>LINUX</strong></h2>
                 </div>
              </div>
         </div>
@@ -136,12 +132,12 @@
 
       <div class="card px-4 shadow-lg m-16 flex flex-col md:text-lg text-justify text-md bg-white">
         <div class="flex flex-col justify-center items-center gap-8">
-          <h2 class="font-bold">Portifolio</h2>
-        <span>My personal portifolio which shows my education and projects</span>
-         <h2>HTML, TailwindCSS, NodeJS</h2>
+          <h2 class="font-bold">Incident Handler's Journal</h2>
+        <span>A template of incident documentation made during the Google Cibersecurity Certificate</span>
+         <h2>Made using Google Docs</h2>
         </div>
          <div class="flex justify-end items-end text-2xl pt-4">
-          <a href="https://github.com/VinnyBenev/portifolio"><i class="fa-brands fa-github text-blue-500"></i></a>
+          <a href="https://github.com/VinnyBenev/incident_handler-s_journal"><i class="fa-brands fa-github text-blue-500"></i></a>
          </div>
     </div>
     
